--- a/.github/workflows/slack-test.yml
+++ b/.github/workflows/slack-test.yml
@@ -154,3 +154,13 @@ jobs:
                 {"username":"Username Two","icon_emoji":"large_green_circle","text":"Test Message 2","blocks":[{"type": "section","text": {"type": "mrkdwn","text": "Failed Backup Message 2:"}},{"type": "section","fields":[{"type": "mrkdwn","text": "*Workflow:*\n<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|${{ github.workflow }}>"},{"type": "mrkdwn","text": "*Job:*\n${{ github.job }}"},{"type": "mrkdwn","text": "*Repo:*\n${{ github.repository }}"},{"type": "mrkdwn","text": "*Rman Target:*\n${{ env.RmanTarget }}"}]}]}
         env:
             SLACK_BOT_TOKEN: ${{ steps.get-slack-token.outputs.slack_token }}
+
+      - name: Slack Notification 3
+        id: slack-failure-3
+        uses: slackapi/slack-github-action@v1.26.0
+        with:
+              channel-id: "${{ env.SlackChannel }}"
+              payload: |
+                {"username":"Username Three","icon_emoji":"large_purple_circle","text":"Test Message 3","blocks":[{"type": "section","text": {"type": "mrkdwn","text": "Failed Backup Message 2:"}},{"type": "section","fields":[{"type": "mrkdwn","text": "*Workflow:*\n<${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}|${{ github.workflow }}>"},{"type": "mrkdwn","text": "*Job:*\n${{ github.job }}"},{"type": "mrkdwn","text": "*Repo:*\n${{ github.repository }}"},{"type": "mrkdwn","text": "*Rman Target:*\n${{ env.RmanTarget }}"}]}]}
+        env:
+            SLACK_BOT_TOKEN: ${{ steps.get-slack-token.outputs.slack_token }}
