--- a/.github/workflows/oracle-db-backup.yml
+++ b/.github/workflows/oracle-db-backup.yml
@@ -430,10 +430,9 @@ jobs:
           if [[ "$RmanTarget" =~ "standbydb1" ]]; then
              echo "Target is 1st Standby"
           fi
-          ls -l  ${inventory}/group_vars/${RmanTarget/primarydb/standbydb1}.yml
           echo "Standby Config File is ${inventory}/group_vars/${RmanTarget/primarydb/standbydb1}.yml"
           if [[ ! -e ${inventory}/group_vars/${RmanTarget/primarydb/standbydb1}.yml ]]; then
-             echo "Standby config file exists"
+             echo "Standby config file does not exist"
           fi
           echo "End of Debug"
           #  *** END OF DEBUG
