--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/update_oem_targets.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/update_oem_targets.yml
@@ -13,20 +13,13 @@
       set_fact:
         emcli_login: ". {{ stage }}/emcli_login.sh > /dev/null 2>&1"
 
-    - name: Get Environment Name From EC2 Tags
-      shell: |
-        export PATH=$PATH:/usr/local/bin
-        INSTANCEID=$(wget -q -O - http://169.254.169.254/latest/meta-data/instance-id)
-        aws ec2 describe-tags --filters "Name=resource-id,Values=${INSTANCEID}" "Name=key,Values=Name" --query "Tags[].Value" --output text | cut -d'-' -f1-3
-      register: get_target_environment_name
-
     - name: Include Set Monitoring Password Task From Oem Password Rotation Role
       include_role:
         name: "{{ playbook_dir }}/oem_password_rotation"
         tasks_from: set_monitoring_passwords
       vars:
         sysman_password: "{{ oem_sysman_password }}"
-        target_environment_name: "{{ get_target_environment_name.stdout }}"
+        target_environment_name: "{{ environment_name }}"
 
   always:
     - name: Remove Temporary Files from Stage Area
