--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
@@ -87,6 +87,7 @@
     secret_name: "{{ build_secret_name.stdout }}"
   #when: database_primary_sid is defined
 
+
 #  The rest of this play is in a block so we can re-enable monitoring even if it fails
 - name: Rotate Passwords
   when: unlock_system_passwords is not defined
@@ -248,7 +249,9 @@
 
     - name: Synchronise OEM Monitoring Passwords
       include_tasks: update_oem_targets.yml
-      when: rotate_passwords_not_from_oem | default(false)
+      when:
+        - rotate_passwords_not_from_oem | default(false)
+        - database_primary_sid is defined
 
   # Restart Monitoring regardless of success of password rotation
   always:
