--- a/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
+++ b/playbooks/oracle_password_rotation/all_password_rotation/tasks/non_oem_database_passwords.yml
@@ -248,7 +248,9 @@
 
     - name: Synchronise OEM Monitoring Passwords
       include_tasks: update_oem_targets.yml
-      when: rotate_passwords_not_from_oem | default(false)
+      when:
+        - rotate_passwords_not_from_oem | default(false)
+        - database_primary_sid is defined
 
   # Restart Monitoring regardless of success of password rotation
   always:
