--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_password.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_password.yml
@@ -44,4 +44,4 @@
   loop: "{{ monitor_list }}"
   loop_control:
     loop_var: monitor_item
-  when: monitor_item.split()[0] == target_env..split()[0]
+  when: monitor_item.split()[0] == target_env.split()[0]
