Pass monitor item

--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_passwords.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_passwords.yml
@@ -25,7 +25,7 @@
           set_fact:
             host_match: "{{ inventory_hostname }}"
 
-    - name: Initialise Reset Monitor List
+    - name: Initialise Monitor List
       set_fact:
         monitor_list: []
 
@@ -56,11 +56,12 @@
             db_username: sys
             monitor_type: oracle_database
             monitor_role: SYSDBA
+            monitor_item: "{{ target_env.split()[0] }}"
           loop: "{{ monitor_list }}"
           loop_control:
             loop_var: target_env
 
-        - name: Reset Unique And Monitor List
+        - name: Reset Monitor List
           set_fact:
             monitor_list: []
 
@@ -101,11 +102,12 @@
         db_username: dbsnmp
         monitor_type: oracle_database
         monitor_role: Normal
+        monitor_item: "{{ target_env.split()[0] }}"
       loop: "{{ monitor_list }}"
       loop_control:
         loop_var: target_env
 
-    - name: Reset Unique And Monitor List
+    - name: Reset Monitor List
       set_fact:
         monitor_list: []
 
@@ -140,6 +142,7 @@
         db_username: "{{ 'ASMSNMP'  if (target_environment_name is search('hmpps-oem')) else 'asmsnmp' }}"
         monitor_type: osm_instance
         monitor_role: SYSASM
+        monitor_item: "{{ target_env.split()[0] }}"
       loop: "{{ monitor_list }}"
       loop_control:
         loop_var: target_env
