--- a/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_password.yml
+++ b/playbooks/oracle_password_rotation/oem_password_rotation/tasks/set_monitoring_password.yml
@@ -32,15 +32,12 @@
   set_fact:
     password: "{{ secretsmanager_passwords_dict['account'].passwords[db_username] }}"
 
-- name: Set the Monitoring Credential
+- name: Set the Monitoring Credential for {{ monitor_item }}
   shell: |
     . ~/.bash_profile
     {{ emcli_login | default() }}
     {{ emcli }} sync 1>/dev/null 2>&1 || ( {{ emcli }} login -username=sysman -password=${SYSMAN_PASSWORD} -force && {{ emcli }} sync ) 1>/dev/null 2>&1
-    {{ emcli }} modify_target -name="{{ monitor_item.split()[0] }}" -type="{{ monitor_type }}" -credentials="UserName:{{ db_username }};password:${PASSWORD};Role:{{ monitor_role }}" -on_agent
+    {{ emcli }} modify_target -name="{{ monitor_item }}" -type="{{ monitor_type }}" -credentials="UserName:{{ db_username }};password:${PASSWORD};Role:{{ monitor_role }}" -on_agent
   environment:
     SYSMAN_PASSWORD: "{{ sysman_password }}"
     PASSWORD: "{{ password }}"
-  loop: "{{ monitor_list }}"
-  loop_control:
-    loop_var: monitor_item
