--- a/.github/workflows/oracle-db-password-rotation.yml
+++ b/.github/workflows/oracle-db-password-rotation.yml
@@ -149,8 +149,8 @@ jobs:
     timeout-minutes: 1440
     continue-on-error: false
     outputs:
-      TargetOemEnvironment: ${{ steps.definetargets.outputs.TargetOemEnvironment }}
-      TargetEnvironmentName: ${{ steps.definetargets.outputs.TargetEnvironmentName }}
+      # TargetOemEnvironment: ${{ steps.definetargets.outputs.TargetOemEnvironment }}
+      # TargetEnvironmentName: ${{ steps.definetargets.outputs.TargetEnvironmentName }}
       RotateGroups: ${{ steps.definetargets.outputs.targets }}
       IncludeSsmBucket: ${{ steps.definetargets.outputs.IncludeSsmBucket }}
       JobId: ${{ github.job }}
@@ -201,27 +201,18 @@ jobs:
         run: |
           targets=""
           TargetEnvironment="${{ needs.oracle_password_preparation.outputs.TargetEnvironment }}"
+          prefix="environment_name_$(echo ${TargetEnvironment} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')"
 
-          if [[ ! "${TargetEnvironment}" =~ oem ]]
-          then
-            prefix="environment_name_$(echo ${TargetEnvironment} | sed 's/dev/development_dev/;s/test/test_test/;s/training/test_training/;s/stage/preproduction_stage/;s/pre-prod/preproduction_pre_prod/;s/-prod/_production_prod/;s/-/_/g')"
-          else
-            prefix="environment_name_$(echo ${TargetEnvironment} | sed 's/-/_/g')"
-          fi
           build_target() {
             databasetype=${1}
             if [[ -e group_vars/${prefix}_${databasetype}_primarydb.yml ]]
             then
               targets="${targets}${prefix}_${databasetype}_dbs,"
-            elif [[ "${databasetype}" == "oem" ]]
-            then
-              targets="${prefix}"
             fi
             echo
           }
           
           ApplicationType=$(echo ${TargetEnvironment} | cut -d- -f1-2)
-          Environment=$(echo ${TargetEnvironment} | cut -d- -f3)
 
           if [[ "${ApplicationType}" == "delius-core" ]]
           then
@@ -231,26 +222,18 @@ jobs:
             build_target mis
             build_target boe
             build_target dsd
-          else
-            build_target oem
           fi
 
           if [[ "${ApplicationType}" != "hmpps-oem" ]]
           then
-            [[ "${Environment}" == "dev" ]] && OemEnvironment=development
-            [[ "${Environment}" == "test" || "${Environment}" = "training" ]] && OemEnvironment=test
-            [[ "${Environment}" == "stage" || "${Environment}" = "preprod" ]] && OemEnvironment=preproduction
-            [[ "${Environment}" == "prod" ]] && OemEnvironment=production
-            TargetOemEnvironment=hmpps-oem-${OemEnvironment}
             IncludeSsmBucket="-e ansible_aws_ssm_bucket_name=${{ vars.ANSIBLE_AWS_SSM_BUCKET_NAME }}" 
           else
-            TargetOemEnvironment=${TargetEnvironment}
+            targets=environment_name_$(echo ${TargetEnvironment} | sed 's/-/_/g')
             IncludeSsmBucket=""
           fi
 
           echo "targets=$targets" >> $GITHUB_OUTPUT
-          echo "TargetOemEnvironment=${TargetOemEnvironment}" >> $GITHUB_OUTPUT
-          echo "TargetEnvironmentName=${TargetEnvironment}" >> $GITHUB_OUTPUT
+          echo "TargetEnvironment=${TargetEnvironment}" >> $GITHUB_OUTPUT
           echo "IncludeSsmBucket=${IncludeSsmBucket}" >> $GITHUB_OUTPUT
 
       - name: Configure AWS Credentials
@@ -269,138 +252,138 @@ jobs:
           ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
           $database_command -i $inventory ${{ steps.definetargets.outputs.IncludeSsmBucket }} \
           -e rotate_groups=${{ steps.definetargets.outputs.targets }} \
-          -e environment_name=${{ steps.definetargets.outputs.TargetEnvironmentName }} ${{ needs.oracle_password_preparation.outputs.VerboseOutput }} ${{ needs.oracle_password_preparation.outputs.AnsibleForks }}
+          -e target_environment=${{ needs.oracle_password_rotation.outputs.TargetEnvironment }} ${{ needs.oracle_password_preparation.outputs.VerboseOutput }} ${{ needs.oracle_password_preparation.outputs.AnsibleForks }}
 
-  oracle_update_oem_targets:
-    name: oracle-update-oem-targets
-    needs: [oracle_password_preparation,oracle_password_rotation]
-    environment: ${{ needs.oracle_password_rotation.outputs.TargetOemEnvironment }}-preapproved
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.78.0
-    timeout-minutes: 1440
-    continue-on-error: false
-    outputs:
-      JobId: ${{ github.job }}
-    steps:
+  # oracle_update_oem_targets:
+  #   name: oracle-update-oem-targets
+  #   needs: [oracle_password_preparation,oracle_password_rotation]
+  #   environment: ${{ needs.oracle_password_rotation.outputs.TargetOemEnvironment }}-preapproved
+  #   runs-on: ubuntu-latest
+  #   container:
+  #     image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.78.0
+  #   timeout-minutes: 1440
+  #   continue-on-error: false
+  #   outputs:
+  #     JobId: ${{ github.job }}
+  #   steps:
 
-      - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
-        uses: actions/checkout@v4
-        with:
-          sparse-checkout-cone-mode: false
-          sparse-checkout: |
-            playbooks/oracle_password_rotation
-            playbooks/ansible.cfg
-          path: operations
-          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
-          fetch-depth: 0
+  #     - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
+  #       uses: actions/checkout@v4
+  #       with:
+  #         sparse-checkout-cone-mode: false
+  #         sparse-checkout: |
+  #           playbooks/oracle_password_rotation
+  #           playbooks/ansible.cfg
+  #         path: operations
+  #         ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
+  #         fetch-depth: 0
 
-      - name: Checkout Ansible Inventory From modernisation-platform-configuration-management
-        uses: actions/checkout@v4
-        with:
-          repository: ministryofjustice/modernisation-platform-configuration-management
-          sparse-checkout-cone-mode: false
-          sparse-checkout: |
-            ansible/hosts
-            ansible/group_vars
-          path: inventory
-          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
-          fetch-depth: 0
+  #     - name: Checkout Ansible Inventory From modernisation-platform-configuration-management
+  #       uses: actions/checkout@v4
+  #       with:
+  #         repository: ministryofjustice/modernisation-platform-configuration-management
+  #         sparse-checkout-cone-mode: false
+  #         sparse-checkout: |
+  #           ansible/hosts
+  #           ansible/group_vars
+  #         path: inventory
+  #         ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
+  #         fetch-depth: 0
 
-      - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
-        uses: actions/checkout@v4
-        with:
-          repository: ministryofjustice/modernisation-platform-configuration-management
-          sparse-checkout-cone-mode: false
-          sparse-checkout: |
-            ansible/roles/secretsmanager-passwords
-            ansible/roles/get-modernisation-platform-facts
-          path: roles
-          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
-          fetch-depth: 0
+  #     - name: Checkout Ansible Required Roles From modernisation-platform-configuration-management
+  #       uses: actions/checkout@v4
+  #       with:
+  #         repository: ministryofjustice/modernisation-platform-configuration-management
+  #         sparse-checkout-cone-mode: false
+  #         sparse-checkout: |
+  #           ansible/roles/secretsmanager-passwords
+  #           ansible/roles/get-modernisation-platform-facts
+  #         path: roles
+  #         ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
+  #         fetch-depth: 0
 
-      - name: Configure AWS Credentials
-        id: login-aws
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
-          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
-          role-duration-seconds: 21600
-          aws-region: "eu-west-2"
+  #     - name: Configure AWS Credentials
+  #       id: login-aws
+  #       uses: aws-actions/configure-aws-credentials@v4
+  #       with:
+  #         role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+  #         role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+  #         role-duration-seconds: 21600
+  #         aws-region: "eu-west-2"
 
-      - name: Start Ansible Update OEM Targets
-        shell: bash
-        run: |
-          export ANSIBLE_CONFIG=$ansible_config
-          ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
-          $oem_command -i $inventory \
-          -e oem_target=environment_name_$(echo ${{ needs.oracle_password_rotation.outputs.TargetOemEnvironment }} | sed 's/-/_/g') \
-          -e environment_name=${{ needs.oracle_password_rotation.outputs.TargetOemEnvironment }}  \
-          -e target_environment_name=${{ needs.oracle_password_rotation.outputs.TargetEnvironmentName }} \
-          -e sync_monitoring_passwords=yes \
-          -e rotate_rman_password=no \
-          -e rotate_oem_passwords=no ${{ needs.oracle_password_preparation.outputs.VerboseOutput }}
+  #     - name: Start Ansible Update OEM Targets
+  #       shell: bash
+  #       run: |
+  #         export ANSIBLE_CONFIG=$ansible_config
+  #         ln -s $PWD/roles/ansible/roles $PWD/operations/playbooks/oracle_password_rotation/roles
+  #         $oem_command -i $inventory \
+  #         -e oem_target=environment_name_$(echo ${{ needs.oracle_password_rotation.outputs.TargetOemEnvironment }} | sed 's/-/_/g') \
+  #         -e environment_name=${{ needs.oracle_password_rotation.outputs.TargetOemEnvironment }}  \
+  #         -e target_environment_name=${{ needs.oracle_password_rotation.outputs.TargetEnvironmentName }} \
+  #         -e sync_monitoring_passwords=yes \
+  #         -e rotate_rman_password=no \
+  #         -e rotate_oem_passwords=no ${{ needs.oracle_password_preparation.outputs.VerboseOutput }}
 
-  oracle_unlock_system_users:
-    name: oracle-unlock-system-users
-    needs: [oracle_password_preparation,oracle_password_rotation, oracle_update_oem_targets]
-    environment: ${{ needs.oracle_password_preparation.outputs.TargetEnvironment }}-preapproved
-    runs-on: ubuntu-latest
-    container:
-      image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.78.0
-    timeout-minutes: 1440
-    continue-on-error: false
-    outputs:
-      JobId: ${{ github.job }}
-    steps:
+  # oracle_unlock_system_users:
+  #   name: oracle-unlock-system-users
+  #   needs: [oracle_password_preparation,oracle_password_rotation, oracle_update_oem_targets]
+  #   environment: ${{ needs.oracle_password_preparation.outputs.TargetEnvironment }}-preapproved
+  #   runs-on: ubuntu-latest
+  #   container:
+  #     image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.78.0
+  #   timeout-minutes: 1440
+  #   continue-on-error: false
+  #   outputs:
+  #     JobId: ${{ github.job }}
+  #   steps:
 
-      - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
-        uses: actions/checkout@v4
-        with:
-          sparse-checkout-cone-mode: false
-          sparse-checkout: |
-            playbooks/oracle_password_rotation
-            playbooks/ansible.cfg
-          path: operations
-          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
-          fetch-depth: 0
+  #     - name: Checkout Ansible Playbooks and Roles From hmpps-delius-operation-automation
+  #       uses: actions/checkout@v4
+  #       with:
+  #         sparse-checkout-cone-mode: false
+  #         sparse-checkout: |
+  #           playbooks/oracle_password_rotation
+  #           playbooks/ansible.cfg
+  #         path: operations
+  #         ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceCodeVersion || 'main' }}
+  #         fetch-depth: 0
 
-      - name: Checkout Ansible Inventory From modernisation-platform-configuration-management
-        uses: actions/checkout@v4
-        with:
-          repository: ministryofjustice/modernisation-platform-configuration-management
-          sparse-checkout-cone-mode: false
-          sparse-checkout: |
-            ansible/hosts
-            ansible/group_vars
-          path: inventory
-          ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
-          fetch-depth: 0
+  #     - name: Checkout Ansible Inventory From modernisation-platform-configuration-management
+  #       uses: actions/checkout@v4
+  #       with:
+  #         repository: ministryofjustice/modernisation-platform-configuration-management
+  #         sparse-checkout-cone-mode: false
+  #         sparse-checkout: |
+  #           ansible/hosts
+  #           ansible/group_vars
+  #         path: inventory
+  #         ref: ${{ github.event_name == 'workflow_dispatch' && github.event.inputs.SourceConfigVersion || 'main' }}
+  #         fetch-depth: 0
 
-      - name: Configure AWS Credentials
-        id: login-aws
-        uses: aws-actions/configure-aws-credentials@v4
-        with:
-          role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
-          role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
-          role-duration-seconds: 21600
-          aws-region: "eu-west-2"
+  #     - name: Configure AWS Credentials
+  #       id: login-aws
+  #       uses: aws-actions/configure-aws-credentials@v4
+  #       with:
+  #         role-to-assume: "arn:aws:iam::${{ vars.AWS_ACCOUNT_ID }}:role/modernisation-platform-oidc-cicd"
+  #         role-session-name: "hmpps-delius-operational-automation-${{ github.run_number }}"
+  #         role-duration-seconds: 21600
+  #         aws-region: "eu-west-2"
 
-      - name: Start Ansible Unlock System Users
-        shell: bash
-        run: |
-          export ANSIBLE_CONFIG=$ansible_config
-          $database_command -i $inventory ${{ needs.oracle_password_rotation.outputs.IncludeSsmBucket }} \
-          -e rotate_groups=${{ needs.oracle_password_rotation.outputs.RotateGroups }} \
-          -e environment_name=${{ needs.oracle_password_preparation.outputs.TargetEnvironment }} \
-          -e unlock_system_passwords=yes ${{ needs.oracle_password_preparation.outputs.VerboseOutput }} ${{ needs.oracle_password_preparation.outputs.AnsibleForks }}
+  #     - name: Start Ansible Unlock System Users
+  #       shell: bash
+  #       run: |
+  #         export ANSIBLE_CONFIG=$ansible_config
+  #         $database_command -i $inventory ${{ needs.oracle_password_rotation.outputs.IncludeSsmBucket }} \
+  #         -e rotate_groups=${{ needs.oracle_password_rotation.outputs.RotateGroups }} \
+  #         -e environment_name=${{ needs.oracle_password_preparation.outputs.TargetEnvironment }} \
+  #         -e unlock_system_passwords=yes ${{ needs.oracle_password_preparation.outputs.VerboseOutput }} ${{ needs.oracle_password_preparation.outputs.AnsibleForks }}
 
   slack-notification:
     if: ${{ failure() }}
     runs-on: ubuntu-latest
     container:
       image: ghcr.io/ministryofjustice/hmpps-delius-operational-automation:0.78.0
-    needs: [oracle_password_preparation,oracle_duplicate_in_progress,oracle_password_rotation,oracle_update_oem_targets,oracle_unlock_system_users]
+    needs: [oracle_password_preparation,oracle_duplicate_in_progress,oracle_password_rotation] #,oracle_update_oem_targets,oracle_unlock_system_users]
     environment: ${{ needs.oracle_password_preparation.outputs.TargetEnvironment }}-preapproved
     steps:
 
